# 2D-Interaction-Project

./: CMakeLists.txt  README.md
include/: gl_renderer.cpp  gl_renderer.h  useful_lib.h
resources/shaders/: quad.vert  unlit.frag
src/: gl_renderer.cpp  main.cpp
